# mergen-ade

./: .gitignore  AGENTS.md  Cargo.toml  KNOWN_ISSUES.md  LICENSE  README.md  apps.json  build.rs  llm.txt  llms.txt  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: release.yml
diagnostics-v016/: notary-submit.json
scripts/: build-release.ps1  package-macos-release.sh  setup-msvc-build-tools.ps1
scripts/__tests__/: build-release.tests.ps1
src/: app.rs  config.rs  layout.rs  main.rs  models.rs  terminal.rs  title.rs
target_test/: .rustc_info.json
target_test/debug/.fingerprint/anyhow-cab676935b65c6b0/: build-script-build-script-build  build-script-build-script-build.json
target_test/debug/.fingerprint/autocfg-1e4091859533cea9/: lib-autocfg  lib-autocfg.json
target_test/debug/.fingerprint/bytemuck_derive-89f2d7c1324c6cc2/: lib-bytemuck_derive  lib-bytemuck_derive.json
target_test/debug/.fingerprint/cfg_aliases-638dd212747a522a/: lib-cfg_aliases  lib-cfg_aliases.json
target_test/debug/.fingerprint/crc32fast-194a8db809e254c6/: build-script-build-script-build  build-script-build-script-build.json
target_test/debug/.fingerprint/crossbeam-utils-9206ad300a44717f/: build-script-build-script-build  build-script-build-script-build.json
target_test/debug/.fingerprint/displaydoc-794e1fa4b3387d06/: lib-displaydoc  lib-displaydoc.json
target_test/debug/.fingerprint/equator-macro-a276fd537b61edd7/: lib-equator_macro  lib-equator_macro.json
target_test/debug/.fingerprint/generic-array-7f1eed5cba488258/: build-script-build-script-build  build-script-build-script-build.json
target_test/debug/.fingerprint/khronos_api-a897d645efd6e190/: build-script-build-script-build  build-script-build-script-build.json
target_test/debug/.fingerprint/khronos_api-e74ec4c3731a279c/: run-build-script-build-script-build  run-build-script-build-script-build.json
target_test/debug/.fingerprint/libc-32ae54f1c7be2e5d/: build-script-build-script-build  build-script-build-script-build.json
target_test/debug/.fingerprint/phf_generator-316d5ce070660ddb/: lib-phf_generator  (+1 more)
(+176 files in other folders)
