[package]
name = "mergen-ade"
version = "0.1.0"
edition = "2021"

[dependencies]
alacritty_terminal = { version = "0.25", default-features = false }
crossbeam-channel = "0.5"
directories = "6"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
log = "0.4"
env_logger = "0.11"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
