[package]
name = "mergen-ade"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
arboard = "3"
crossbeam-channel = "0.5"
directories = "6"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
iconflow = { version = "1.0.0", features = ["pack-lucide"] }
log = "0.4"
env_logger = "0.11"
portable-pty = "0.9"
raw-window-handle = "0.6"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
tattoy-wezterm-term = "0.1.0-fork.5"
tattoy-wezterm-surface = "0.1.0-fork.2"
toml = "0.8"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Security", "Win32_System_Diagnostics_ToolHelp", "Win32_System_JobObjects", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
ico = "0.4"
image = { version = "0.25", default-features = false, features = ["ico", "png"] }
winres = "0.1"

[profile.release]
lto = false
codegen-units = 8
panic = "abort"
strip = "symbols"
